--- a/appuser/templates/user/base.html
+++ b/appuser/templates/user/base.html
@@ -10,6 +10,7 @@
     <title>User</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
@@ -208,9 +209,8 @@
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div> 
-                <a href="#" class="nav_logo"> <i class="bi nav_icon bi-layers-fill" ></i> <span class="nav_logo-name">NAV</span> </a>
+                <a href="/" class="nav_logo"> <i class="bi nav_icon bi-layers-fill" ></i> <span class="nav_logo-name">NAV</span> </a>
                 <div class="nav_list"> 
-                    <a href="/" class="nav_link"><i class="bi nav_icon bi-house-fill" ></i> <span class="nav_name">Ana menü</span> </a> 
                     <a href="/" class="nav_link"> <i class="bi nav_icon bi-view-list" ></i> <span class="nav_name">Liste</span> </a> 
                     <a href="/user/profile/" class="nav_link"><i class="bi nav_icon bi-person" ></i> <span class="nav_name">Profil</span> </a>
                     <a href="/user/account-summary/" class="nav_link"> <i class="bi nav_icon bi-person-lines-fill" ></i><span class="nav_name">Hesap Özeti</span></a>
@@ -248,7 +248,6 @@
             {% block content %}{% endblock content %}
         </div>
     </div>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
     <script>
