--- a/need/templates/role/role_list.html
+++ b/need/templates/role/role_list.html
@@ -8,7 +8,7 @@
   <!-- Roller -->
   <div class="d-flex flex-column gap-2">
     <div class="row">
-      <div class="col-2 col-md-2" style="padding-top:50px;">
+      <div class="col-2  col-md-2 col-lg-2" style="padding-top:50px;">
     {% for role in roles %}
 
       <!-- Sol: İsim -->
@@ -19,7 +19,7 @@
 
     {% endfor %}
       </div>
-      <div class="col-8 col-md-9" style="overflow:auto">
+      <div class="col-6  col-md-7  col-lg-8" style="overflow:auto">
       <!-- Orta: Scrollable İzinler -->
       <table class="table table-bordered table-sm">
   <thead>
@@ -50,13 +50,18 @@
   </tbody>
 </table>
       </div>
-      <div class="col-2 col-md-1" style="padding-top:50px;">
+      <div class="col-4 col-md-3 col-lg-2" style="padding-top:50px;">
     {% for role in roles %}
 
       <!-- Sağ: Buton -->
       <div style="min-width:100px; height:50px; flex-shrink:0;" class="text-end">
         <a href="{% url 'need:role_update' role.slug %}" class="btn btn-sm btn-warning">Düzenle</a>
+      <a href="{% url 'need:role_delete' role.slug %}" class="btn btn-sm btn-danger"
+        onclick="return confirm('Silmek istediğinize emin misiniz?')">
+          <i class="bi bi-trash"></i>
+      </a>
       </div>
+
 
     {% endfor %}
       </div>
